src/styles/index.css
@import url('https://fonts.googleapis.com/css2?family=Bitter:wght@400;500;600;700;800&display=swap');

body {
    margin: 0;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
        'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
        'Helvetica Neue', sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

code {
    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
        monospace;
}

.hero-container {
    position: relative;
}

.hero-section-container {
    height: 100%;
}

.hero-img-container {
    height: 385px;
}

.hero-bg-image {
    position: absolute;
    z-index: -10;
    object-fit: cover;
    top: 0;
    height: 100%;
    object-position: center;
    opacity: 25%;
}

.hero-img-container::before {
    content: '';
    background-color: #2f4858;
    background-size: 100%;
    height: 100%;
    width: 100%;
    top: 0%;
    position: absolute;
    z-index: -11;
}

@media screen and (min-width: 765px) {
    .hero-bg-image {
        position: absolute;
        top: 0%;
        height: 100%;
        width: auto;
        z-index: -10;
        object-fit: cover;
        object-position: right;
        opacity: 25%;
    }

    .hero-img-container::before {
        height: 100%;
    }
}

@media screen and (min-width: 1024px) {
    .hero-img-container::before {
        height: 129%;
        top: -29%;
    }

    .hero-bg-image {
        top: -30%;
        height: 130%;
    }

    .hero-copy-container {
        width: 50vw;
        max-width: 50vw;
    }

    .hero-img-container {
        width: 50vw;
    }

    .install-img-container {
        max-width: 65.5vw;
    }

    .selling-bullet-points {
        max-height: 380px;
    }
}

.install-img-container {
    position: relative;
    height: 380px;
}

.installer-bg-img {
    content: '';
    position: absolute;
    object-fit: cover;
    top: 0%;
    height: 100%;
    width: 100%;
    opacity: 20%;
}

